syntax = "proto3";

package ecommerce;

option go_package = "ecommerce.proto";

import "ecommerce/common.proto";

enum OrderStatus {
    PENDING = 0;
    PROCESSING = 1;
    SHIPPED = 2;
    DELIVERED = 3;
    CANCELLED = 4;
}

message Order {
    string id = 1;
    string userId = 2;
    repeated Product products = 3;
    float totalPrice = 4;
    OrderStatus status = 5;
}

service OrderService {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
}

message GetOrdersRequest {
    string userId = 1;
    int32 page = 2;
    int32 pageSize = 3;
}

message GetOrdersResponse {
    repeated Order orders = 1;
    int32 totalCount = 2;
}

message CreateOrderRequest {
    string userId = 1;
    repeated string productIds = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message UpdateOrderRequest {
    string id = 1;
    OrderStatus status = 2;
}

message UpdateOrderResponse {
    Order order = 1;
}